// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Titlebar tests should not render content if user is logged out 1`] = `
<body>
  <div
    id="portals"
  />
  .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  width: 40px;
  height: 40px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c4 {
  height: 40px;
  padding-top: 1px;
  padding-bottom: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 42px;
  background-color: #11ab51;
  padding: 0px 5px 0px 5px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

.c0 {
  height: 42px;
}

<div>
    <div
      class="c0"
    />
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          alt="Greenbone Security Assistant"
          class="c3"
          src="greenbone.svg"
        />
        <img
          alt="Greenbone Security Assistant"
          class="c4"
          src="/img/gsa.svg"
        />
      </div>
      <div>
        Vendor Version
      </div>
    </div>
  </div>
</body>
`;

exports[`Titlebar tests should render content if user is logged in 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -5px;
}

.c14 > * {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c14 > * {
  margin-left: 5px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c16 {
  cursor: pointer;
}

.c8 {
  height: 24px;
  width: 24px;
  line-height: 24px;
}

.c8 * {
  height: inherit;
  width: inherit;
}

.c15 {
  height: 16px;
  width: 16px;
  line-height: 16px;
}

.c15 * {
  height: inherit;
  width: inherit;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  position: relative;
  display: none;
  -webkit-animation: iKjwYD 0.1s ease-in;
  animation: iKjwYD 0.1s ease-in;
}

.c6:hover .c10 {
  display: block;
}

.c11 {
  position: absolute;
  margin: 0;
  padding: 0;
  right: 0;
  top: 0;
  z-index: 600;
  list-style: none;
  font-size: 10px;
  width: 300px;
}

.c12 {
  height: 30px;
  width: 300px;
  border-left: 1px solid #7F7F7F;
  border-right: 1px solid #7F7F7F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding-left: 12px;
}

.c12:hover {
  background: #11ab51;
  color: #fff;
  cursor: pointer;
}

.c12:first-child {
  border-top: 1px solid #7F7F7F;
  cursor: default;
  background-color: #f3f3f3;
}

.c12:first-child:hover {
  color: #000;
}

.c12:nth-child(2) {
  cursor: default;
  background-color: #f3f3f3;
}

.c12:nth-child(2):hover {
  color: #000;
}

.c12:last-child {
  border-top: 1px solid #7F7F7F;
  border-bottom: 1px solid #7F7F7F;
}

.c9 {
  margin-right: 10px;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100%;
  height: 100%;
}

.c17:link,
.c17:hover,
.c17:active,
.c17:visited,
.c17:hover {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4 {
  width: 40px;
  height: 40px;
  margin-right: 4px;
  margin-top: 1px;
  margin-bottom: 1px;
}

.c5 {
  height: 40px;
  padding-top: 1px;
  padding-bottom: 1px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 42px;
  background-color: #11ab51;
  padding: 0px 5px 0px 5px;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

.c0 {
  height: 42px;
}

@media print {
  .c16 {
    display: none;
  }
}

<body>
  <div
    id="portals"
  />
  <div>
    <div
      class="c0"
    />
    <div
      class="c1"
    >
      <a
        class="c2"
        href="/"
        title="Dashboard"
      >
        <div
          class="c3"
        >
          <img
            alt="Greenbone Security Assistant"
            class="c4"
            src="greenbone.svg"
          />
          <img
            alt="Greenbone Security Assistant"
            class="c5"
            src="/img/gsa.svg"
          />
        </div>
      </a>
      <span
        class="c6 c7"
        data-testid="usermenu"
      >
        <span
          class="c8 c9"
          data-testid="svg-icon"
        >
          <svg>
            user.svg
          </svg>
        </span>
        <div
          class="c10"
        >
          <ul
            class="c11"
          >
            <li
              class="c12"
              title="Logged in as: username"
            >
              <div
                class="c13"
              >
                <div
                  class="c14"
                  margin="5px"
                >
                  <span
                    class="c15"
                    data-testid="svg-icon"
                  >
                    <svg>
                      user.svg
                    </svg>
                  </span>
                  <span>
                    username
                  </span>
                </div>
              </div>
            </li>
            <li
              class="c12"
            >
              <div
                class="c13"
              >
                <div
                  class="c14"
                  margin="5px"
                >
                  <span
                    class="c15"
                    data-testid="svg-icon"
                  >
                    <svg>
                      schedule.svg
                    </svg>
                  </span>
                  <span>
                    Session timeout: 
                  </span>
                  <span
                    class="c16 c15"
                    data-testid="svg-icon"
                    title="Renew session timeout"
                  >
                    <svg
                      title="Renew session timeout"
                    >
                      refresh.svg
                    </svg>
                  </span>
                </div>
              </div>
            </li>
            <li
              class="c12"
            >
              <a
                class="c17"
                data-testid="usermenu-settings"
                href="/usersettings"
              >
                <div
                  class="c13"
                >
                  <div
                    class="c14"
                    margin="5px"
                  >
                    <span
                      class="c15"
                      data-testid="svg-icon"
                    >
                      <svg>
                        my_setting.svg
                      </svg>
                    </span>
                    <span>
                      My Settings
                    </span>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="c12"
              data-testid="usermenu-logout"
            >
              <div
                class="c13"
              >
                <div
                  class="c14"
                  margin="5px"
                >
                  <span
                    class="c15"
                    data-testid="svg-icon"
                  >
                    <svg>
                      logout.svg
                    </svg>
                  </span>
                  <span>
                    Log Out
                  </span>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </span>
    </div>
  </div>
</body>
`;
